# eel

./: .gitignore  Makefile  README.md  eel.c  eel.cabal
app/: Main.hs
src/: CEel.hs  Eel.hs
test/: Spec.hs
