name:                eel
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/eel#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Brett Letner
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Eel, CEel
  build-depends:       base >= 4.7 && < 5,
                       binary >= 0.7.5.0,
                       bytestring >= 0.10.6.0,
                       containers >= 0.5.6.2,
                       data-binary-ieee754 >= 0.4.4,
                       monads-tf >= 0.1.0.2,
                       process >= 1.2.3.0
  default-language:    Haskell2010

executable eel-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, eel, monads-tf >= 0.1.0.2
  default-language:    Haskell2010

test-suite eel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, eel, monads-tf >= 0.1.0.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/eel
